kubernetes-redirect.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: www-redirect
  namespace: $NAMESPACE
  annotations:
    nginx.ingress.kubernetes.io/permanent-redirect: "https://www.bobbygeorge.dev/$1"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - bobbygeorge.dev
    secretName: bobbygeorge-dev
  rules:
  - host: bobbygeorge.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bobbygeorge-dev
            port:
              number: 80
