kubernetes.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bobbygeorge-dev
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bobbygeorge-dev
  namespace: bobbygeorge-dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bobbygeorge-dev
  template:
    metadata:
      labels:
        app: bobbygeorge-dev
    spec:
      containers:
      - name: nginx
        image: cme-harbor.int.bobbygeorge.dev/bobbygeorge.dev/bobbygeorge.dev:2
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: bobbygeorge-dev
  namespace: bobbygeorge-dev
spec:
  ipFamilyPolicy: PreferDualStack
  selector:
    app: bobbygeorge-dev
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bobbygeorge-dev
  namespace: bobbygeorge-dev
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - www.bobbygeorge.dev
    secretName: www-bobbygeorge-dev
  rules:
  - host: www.bobbygeorge.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bobbygeorge-dev
            port: 
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: www-redirect
  namespace: bobbygeorge-dev
  annotations:
    nginx.ingress.kubernetes.io/permanent-redirect: "https://www.bobbygeorge.dev/$1"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - bobbygeorge.dev
    secretName: bobbygeorge-dev
  rules:
  - host: bobbygeorge.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bobbygeorge-dev
            port:
              number: 80
